      happen on some versions of Linux). This option has not been extensively
      tested, and feedback regarding its use would be helpful.
    + Improved logging: logging occurs to a circular memory buffer, enabling
      more helpful and detailed online bug reports.
    + Upgraded SVG rendering system to Batik 1.6.
    + Upgraded other dependencies to newer versions.
- Fixed Bugs:
    + Deleting of single orders does not work [1005872, 1118742]
    + Hold Support could be issued to nonadjacent units [1231701]
	+ Adjudication error: No convoy, but bounce [1205531, 1116568, 1053458]
        - This is now fixed. As it turns out, one of the test cases 
          had an incorrect resolution that masked this bug in prior versions.
    + Incorrect importing of history files [1035292]
        - Judge history import (from floc.net and text files) now works.
        - Note that judge import only works for those variants which jDip 
          supports!
    + Importing from floc.net hangs indefinitely [1158290]
        - This cannot be reliable duplicated, but may occur if floc.net is 
          down or responding slowly.
    + Impossible Rick-click on a Mac [1124808]
        - Command + Mouse button emulates right button
        - Shift + Mouse button emulates middle button 
    + jDip doesn't start under Linux [1053723]
        - Should jDip not start with some versions of Linux, try the 
          "-defaultgui" option on the command line.
    + jDip does not see Shortcut Folders [1051678]
        - This works with Java 5 (1.5). This is a known problem with some 
          versions of Java 1.4.x. 
    + Variant Modern: Parsing error "Eastern Mediterranean" [1205550, 1205534]
    + Parse error using judge result build phase [1205547]
        - "Enter multiple orders" dialog now supports judge build orders
    + Map name/report discrepancy [1184073]
    + Loeb9, STP fleet should start NC not SC [1066690]
    + Cannot import - underscore not supported [1117835]