@@ -1,0 +1,7 @@
+<html>
+jDip cannot find where the Variants are, and thus cannot start. 
+<p>
+When you click OK, you will be asked to locate the folder containing jDip 
+variants. This folder will be used the next time jDip starts.
+</html>
+
