@@ -11,7 +11,7 @@ PROGRAM_NAME=jDip
 VERSION_REVISION=0 (Preview Release 1)
 CURRENT_LANGUAGE=English
 # 
-#
+# 
 # ==============================================================
 # Utils.java resource messages
 # {0} = resource name
@@ -76,6 +76,8 @@ ClientFrame.mode.edit=EDIT
 ClientFrame.mode.review=REVIEW
 ClientFrame.mode.order=Ready
 ClientFrame.mode.ended=END
+ClientFrame.error.novariants.dialog.title=Startup Error: No Variants
+ClientFrame.error.novariants.dialog.text.location=resource/il8n/dialog/en/NoVariantsInfo.html
 # 
 # ==============================================================
 # Unit.java
@@ -591,6 +593,7 @@ GPP.map.label.text=Default map name display:
 GPP.map.label.text.note=Some maps may not have both abbreviated and full names.
 GPP.order.sort.label=Default order sorting method:
 GPP.order.sort.direction=Reverse sort
+GPP.selectvariantdir.title=Select Variant Folder Location
 #
 # ==============================================================
 # Display Preference Panel: 
